--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.16.0",
     "tailwindcss": "^4.0.3"
